--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library of Congress Search</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <form id="search-form">
+        <input type="text" id="q" name="q" placeholder="search" />
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
